# plc-emulator

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  RELEASE_NOTES_v0.1.0.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: implementation_plan.md  requirements.md  tasks.md
docs/adr/: ADR-001-tech-stack.md  ADR-002-protocol-scope.md  ADR-003-ui-architecture.md  ADR-004-latency-emulation.md  ADR-005-scripting-engine.md
docs/logs/: 2026-06-20.md
scripts/: e2e_test.yaml
scripts/examples/: conditional.yaml  ramp_loop.yaml  sawtooth.yaml
src/: __init__.py  config.py
src/device/: __init__.py  device_definition.py  device_manager.py  plc_models.py
src/i18n/: __init__.py  i18n.py
src/persistence/: persistence_manager.py
src/protocol/: __init__.py  base.py  command_processor.py  constants.py  device_parser.py  mc_frame_1e.py  mc_frame_3e.py  mc_frame_4e.py  slmp_handler.py
src/scripting/: __init__.py  builtins.py  engine.py  evaluator.py  parser.py
src/server/: __init__.py  latency.py  tcp_server.py  udp_server.py
src/web/: __init__.py  api_routes.py  app.py  websocket_handler.py
static/: index.html
tests/: __init__.py  test_builtins.py  test_command_processor.py  test_config.py  test_device_manager.py  test_device_parser.py  test_e2e.py  test_evaluator.py  test_latency.py  test_mc_frame_1e.py  test_mc_frame_3e.py  test_mc_frame_4e.py  test_persistence.py  test_plc_models.py  test_protocol_base.py  test_script_engine.py  test_script_parser.py  test_slmp_handler.py  test_tcp_server.py  test_udp_server.py  test_web_api.py
(+7 files in other folders)
